// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrivacyModal /> should render correctly 1`] = `
<div
  className="privacy-policy"
>
  <div>
     
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="link"
      className="p-0"
      disabled={false}
      id="privacy-policy"
      name="privacy"
      onClick={[Function]}
      variant="link"
    >
      <FormattedMessage
        id="Thats my title"
        values={Object {}}
      />
    </Button>
  </div>
  <Modal
    animation={false}
    aria-labelledby="contained-modal-title-lg"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    className="privacy-policy"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    id="privacy-modal"
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      className="privacy-policy"
      closeButton={true}
      closeLabel="close.modal"
    >
      <ModalTitle
        bsClass="modal-title"
        className="privacy-policy"
        componentClass="h4"
        id="contained-modal-title-lg"
      >
        <FormattedMessage
          id="privacy-policy"
          values={Object {}}
        />
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <div
        className="content"
        dangerouslySetInnerHTML={
          Object {
            "__html": "My privacy content",
          }
        }
      />
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      className="privacy-policy"
      componentClass="div"
    >
      <CloseButton
        buttonId="cookies-cancel"
        label="global.cancel"
        onClose={[Function]}
      />
    </ModalFooter>
  </Modal>
</div>
`;

exports[`<PrivacyModal /> should render correctly with link key work 1`] = `
<div
  className="privacy-policy"
>
  <div>
    <FormattedMessage
      id="Thats the link keyword"
      values={Object {}}
    />
     
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="link"
      className="p-0"
      disabled={false}
      id="privacy-policy"
      name="privacy"
      onClick={[Function]}
      variant="link"
    >
      <FormattedMessage
        id="Thats my title"
        values={Object {}}
      />
    </Button>
  </div>
  <Modal
    animation={false}
    aria-labelledby="contained-modal-title-lg"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    className="privacy-policy"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    id="privacy-modal"
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      className="privacy-policy"
      closeButton={true}
      closeLabel="close.modal"
    >
      <ModalTitle
        bsClass="modal-title"
        className="privacy-policy"
        componentClass="h4"
        id="contained-modal-title-lg"
      >
        <FormattedMessage
          id="privacy-policy"
          values={Object {}}
        />
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <div
        className="content"
        dangerouslySetInnerHTML={
          Object {
            "__html": "My privacy content",
          }
        }
      />
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      className="privacy-policy"
      componentClass="div"
    >
      <CloseButton
        buttonId="cookies-cancel"
        label="global.cancel"
        onClose={[Function]}
      />
    </ModalFooter>
  </Modal>
</div>
`;
